# mprpc

./: CMakeLists.txt
example/: CMakeLists.txt  friend.pb.h  friend.proto  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
src/: CMakeLists.txt  lockqueue.cc  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcheader.pb.h  rpcprovider.h  zookeeperutil.h
test/protobuf/: CMakeLists.txt  CMakeLists1.txt  a.out  main.cc  test.pb.cc  test.pb.h  test.proto
